# examples

./: .gitignore
_plugin/python/: pyproject.toml
_plugin/rust/: package.json
_plugin/typescript/: package.json
a2a/python/: requirements.txt
a2a/rust/: Cargo.toml
a2a/typescript/: package.json
a2a/typescript/data/agents/: b850bc30-45f8-0041-a00a-83df46d8555d.json
a2a/typescript/data/entities/: 61a0dabb-2575-0c4f-adf6-e80a3796b147.json
a2a/typescript/data/logs/: 038739a9-86df-406b-b527-1e5c84ba3194.json  24fe081c-9580-42f8-ab68-205686c3a513.json  38a2a399-0f65-4999-994c-40c118cdec0e.json  626e04b2-9756-4dcc-ab89-efaab55f4c58.json  82d8706b-efbe-4e3a-a2ea-cab3247c5efc.json  858c0dc8-07d8-4a0c-bc29-1aeb39e1533f.json  874d9aba-f132-4431-808e-678441150255.json  8a4448e5-9333-4912-832b-de2cc726ef3b.json  9b49810c-0289-4677-9f75-e5662617afed.json  c19b7b42-e6d1-4054-a15a-07d0fe545e7f.json  e2486968-bed6-48df-9267-4e070d9b4dee.json  e44c6dce-e800-4d44-8d78-9643ac8926c1.json
a2a/typescript/data/memories/: 24e31e29-5acb-41b8-8e3b-5dc2731ce5af.json  29ca076e-aa49-45d5-879e-d38e4414453d.json  4b2b7dbd-7cde-477a-8f3e-f522956ad85c.json  4be64c03-528e-4570-8f9e-e96753049605.json  8ba3e485-20d2-45c4-b343-e218a67df6a2.json  c2f91ca0-5ecc-4504-8997-d2c15fe974a7.json  d2a43a62-24db-4d72-8197-9f81fab16564.json  f3eea66c-d58e-4fce-a892-750f491841ac.json
a2a/typescript/data/participants/: 4f18093f-3a14-4ad5-9313-9746b9105161.json  b58c8611-64e5-4be9-8c4a-08d7df3b5fd1.json  e14919fc-c7f8-44e4-bca5-6e7a099cded6.json
a2a/typescript/data/rooms/: 08396a1b-5e53-00a2-8a80-3fd7bf6fa10b.json  b850bc30-45f8-0041-a00a-83df46d8555d.json
a2a/typescript/data/worlds/: f672d9db-89c7-0651-b51d-8b67a3c259d6.json
app/capacitor/backend/: package.json
app/capacitor/frontend/: tsconfig.tsbuildinfo
app/electron/backend/: package.json  tsconfig.tsbuildinfo  vitest.config.ts
app/electron/frontend/: tsconfig.tsbuildinfo
app/tauri/frontend/: tsconfig.tsbuildinfo
app/tauri/src-tauri/: Cargo.toml
art/: README.md  pyproject.toml
art/elizaos_art/: trainer.py
art/elizaos_art/games/game_2048/: __init__.py  cli.py
art/tests/: test_games.py  test_integration.py
atropos/blackjack/: pyproject.toml
atropos/diplomacy/: pyproject.toml
atropos/holdem/: pyproject.toml
atropos/reasoning/: pyproject.toml
atropos/textworld/: pyproject.toml
autonomous/rust/autonomous/: Cargo.toml
autonomous/typescript/: package.json
avatar/: package.json
aws/rust/: Cargo.toml
aws/typescript/: package.json
bluesky/python/: requirements.txt
bluesky/rust/bluesky-agent/: Cargo.toml
bluesky/typescript/: package.json  vitest.config.ts
browser-extension/chrome/: package.json
browser-extension/safari/Chat with Webpage/Chat with Webpage.xcodeproj/: project.pbxproj
browser-use/python/: pyproject.toml
browser-use/typescript/: package.json
chat/rust-wasm/: package.json
chat/rust/chat/: Cargo.toml
chat/typescript/: package.json
cloudflare/: package.json
code/: biome.json  package.json
code/.eliza/.elizadb/: postmaster.pid
code/.eliza/.elizadb/global/: 1260  pg_control
code/.eliza/.elizadb/pg_wal/: 00000001000000000000000A  00000001000000000000000B
computer-use/rust/: Cargo.toml
computer-use/typescript/: package.json
convex/: package.json
discord/rust/discord-agent/: Cargo.toml
discord/typescript/: package.json
dnd-vtt/: .env.example  GDD.md  README.md  package.json
dnd-vtt/client/: .env.example  biome.json  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
dnd-vtt/client/src/: App.tsx  index.css
dnd-vtt/client/src/components/: ActionBar.tsx  AdventureLog.tsx  BattleMap.tsx  CharacterPanel.tsx  Header.tsx  InitiativeTracker.tsx  JoinScreen.tsx
dnd-vtt/client/src/store/: gameStore.ts
dnd-vtt/e2e/: package.json  playwright.config.ts
dnd-vtt/e2e/tests/: gameplay.spec.ts  helpers.ts  join-flow.spec.ts  multiplayer-session.spec.ts  multiplayer.spec.ts  solo-player-journey.spec.ts
dnd-vtt/server/: .env.example  drizzle.config.ts  package.json  tsconfig.json
dnd-vtt/server/src/: index.ts
elizagotchi/: biome.json  package.json
farcaster/python/: requirements.txt
farcaster/rust/farcaster-agent/: Cargo.toml
farcaster/typescript/: package.json
game-of-life/rust/game-of-life/: Cargo.toml
game-of-life/typescript/: package.json
gcp/python/: requirements.txt
gcp/rust/: Cargo.toml
gcp/typescript/: package.json
lp-manager/typescript/: package.json  tsconfig.json
mcp/python/: requirements.txt
mcp/rust/: Cargo.toml
mcp/typescript/: package.json
moltbook/: package.json
next/: biome.json  package.json  tsconfig.tsbuildinfo
polymarket/rust/polymarket-demo/: Cargo.toml
polymarket/typescript/: package.json  tsconfig.json
react/: package.json
react-wasm/: package.json
rest-api/actix/: Cargo.toml
rest-api/axum/: Cargo.toml
rest-api/elysia/: package.json
rest-api/express/: package.json
rest-api/fastapi/: requirements.txt
rest-api/flask/: requirements.txt
rest-api/hono/: package.json
rest-api/rocket/: Cargo.toml
roblox/rust/: Cargo.toml
roblox/typescript/: package.json
telegram/rust/telegram-agent/: Cargo.toml
telegram/typescript/: package.json
text-adventure/python/: requirements.txt
text-adventure/rust-wasm/: package.json
text-adventure/rust/game/: Cargo.toml
text-adventure/typescript/: package.json
tic-tac-toe/python/: requirements.txt
tic-tac-toe/rust/: Cargo.toml
tic-tac-toe/typescript/: package.json
town/: biome.json  package.json  tsconfig.json
town/data/: characters.ts  gentle.js
town/data/animations/: campfire.json  gentlesparkle.json  gentlesplash.json  gentlewaterfall.json
town/data/spritesheets/: f1.ts  f2.ts  f3.ts  f4.ts  f5.ts  f6.ts  f7.ts  f8.ts
trader/typescript/: package.json
twitter-xai/python/: requirements.txt
twitter-xai/rust/xai-agent/: Cargo.toml
twitter-xai/typescript/: package.json
vercel/: package.json
vercel/api/python/: requirements.txt
vercel/rust/: Cargo.toml
(+445 files in other folders)
