[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "elizaos-browser-use-example"
version = "0.1.0"
description = "QuantumExplorer - Autonomous browser agent exploring quantum physics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "ElizaOS Team" }
]
keywords = ["browser", "autonomous-agent", "quantum-physics", "elizaos", "web-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "elizaos>=0.1.0",
]

[project.optional-dependencies]
browser = [
    "elizaos-plugin-browser>=1.0",
]
groq = [
    "elizaos-plugin-groq>=1.0",
]
openai = [
    "elizaos-plugin-openai>=1.0",
]
dev = [
    "python-dotenv>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
all = [
    "elizaos-browser-use-example[browser,groq,openai,dev]",
]

[project.scripts]
quantum-explorer = "run:main"
