[package]
name = "eliza-mcp-server"
version = "1.0.0"
edition = "2021"
description = "elizaOS MCP Agent Server - Expose your agent via Model Context Protocol"
license = "MIT"

[dependencies]
elizaos = { path = "../../../packages/rust" }
elizaos_plugin_openai = { path = "../../../plugins/plugin-openai/rust" }
tokio = { version = "1.0", features = ["full", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
