[package]
name = "polymarket-demo"
version = "0.1.0"
edition = "2021"
description = "Autonomous Polymarket demo agent CLI (Rust)"
publish = false

[[bin]]
name = "polymarket-demo"
path = "src/main.rs"

[dependencies]
elizaos-plugin-evm = { path = "../../../../plugins/plugin-evm/rust" }
elizaos-plugin-polymarket = { path = "../../../../plugins/plugin-polymarket/rust" }

tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
dotenvy = "0.15"
rust_decimal = { version = "1.36", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

