[package]
name = "adventure-game"
version = "0.1.0"
edition = "2021"
description = "elizaOS Rust Adventure Game Example"
publish = false

[[bin]]
name = "adventure-game"
path = "src/main.rs"

[dependencies]
# elizaOS Core
elizaos = { path = "../../../packages/rust" }

# elizaOS OpenAI Plugin
elizaos-plugin-openai = { path = "../../../plugins/plugin-openai/rust" }

# Async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "macros", "time"] }

# Error handling
anyhow = "1.0"

# Environment
dotenvy = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dialogue
dialoguer = "0.11"
console = "0.15"

